--- a/src/org/pentaho/di/trans/steps/sequoiadbinput/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/sequoiadbinput/messages/messages_en_US.properties
@@ -16,6 +16,6 @@ SequoiaDBInput.FieldsTab.Title = Fields
 SequoiaDBInput.FieldsTab.Button.Label = Get Fields
 SequoiaDBInput.CSName.Label = Collection Space Name
 SequoiaDBInput.CLName.Label = Collection Name
-SequoiaDBInput.FieldsTab.FIELD_NAME = Name
+SequoiaDBInput.FieldsTab.FIELD_ALIAS = Alias
 SequoiaDBInput.FieldsTab.FIELD_PATH = Path
 SequoiaDBInput.FieldsTab.FIELD_TYPE = Type
