--- a/src/org/pentaho/di/trans/steps/sequoiadb/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/sequoiadb/messages/messages_en_US.properties
@@ -1,2 +1,4 @@
 SequoiaDB.Hostname.default = localhost
 SequoiaDB.Port.default = 11810
+
+SequoiaDB.ErrorMessage.DateConversion=Not sure how to convert {0} to a date
