--- a/src/org/pentaho/di/trans/steps/sequoiadbinput/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/sequoiadbinput/messages/messages_en_US.properties
@@ -4,7 +4,7 @@ SequoiaDBInput.CheckResult.ReceivingRows.OK=Step is receiving input from other s
 SequoiaDBInput.CheckResult.ReceivingRows.ERROR=No input received from other steps!
 
 SequoiaDBInput.Name=SequoiaDB Input
-SequoiaDBInput.TooltipDesc=Reads from a SequoiaDB table
+SequoiaDBInput.TooltipDesc=Reads from a SequoiaDB collection
 SequoiaDBInput.categoryDescription = Big Data
 
 SequoiaDBInput.ConnectionTab.Title = Connection
