resolve the bug: fieldpath field loose in database-repository

--- a/src/org/pentaho/di/trans/steps/sequoiadboutput/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/sequoiadboutput/messages/messages_en_US.properties
@@ -22,3 +22,6 @@ SequoiaDBOutput.FieldsTab.FIELD_Name = Name
 SequoiaDBOutput.Msg.Err.FailedToGetTheFieldVal = Failed to get the value of the field!
 SequoiaDBOutput.Msg.Err.InputFieldsSizeError = The number of input fields is less than output fields!
 SequoiaDBOutput.Msg.Err.FieldsNotFoundInInput = The fields are not found in input: {0}
+SequoiaDBOutput.Msg.Err.FailedToAddField = Failed to add the field: name={0}, path={1}
+SequoiaDBOutput.Msg.Err.FailedToAddSubField = Failed to add the sub-field: name={0}, path={1}
+SequoiaDBOutput.Msg.Err.OutputFieldsEmpty = There is no output field!
