add configure items: bulkinsertsize, username, password

--- a/src/org/pentaho/di/trans/steps/sequoiadboutput/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/sequoiadboutput/messages/messages_en_US.properties
@@ -10,12 +10,15 @@ SequoiaDBOutput.TooltipDesc = Writes to a SequoiaDB collection
 SequoiaDBOutput.ConnectionTab.Title = Connection
 SequoiaDBOutput.Hostname.Label = Host name or IP address
 SequoiaDBOutput.Port.Label = Port
+SequoiaDBOutput.Username.Label = Username
+SequoiaDBOutput.Password.Label = Password
 
 SequoiaDBOutput.OutputTab.Title = Output
 SequoiaDBOutput.FieldsTab.Title = Fields
 SequoiaDBOutput.FieldsTab.Button.Label = Get Fields
 SequoiaDBOutput.CSName.Label = Collection Space Name
 SequoiaDBOutput.CLName.Label = Collection Name
+SequoiaDBOutput.BulkInsertSize.Label = Bulk Insert Size
 SequoiaDBOutput.FieldsTab.FIELD_Path = Path
 SequoiaDBOutput.FieldsTab.FIELD_Name = Name
 
