support query,orderby,skip and limit; add timestamp

--- a/src/org/pentaho/di/trans/steps/sequoiadbinput/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/sequoiadbinput/messages/messages_en_US.properties
@@ -10,6 +10,8 @@ SequoiaDBInput.categoryDescription = Big Data
 SequoiaDBInput.ConnectionTab.Title = Connection
 SequoiaDBInput.Hostname.Label = Host name or IP address
 SequoiaDBInput.Port.Label = Port
+SequoiaDBInput.Username.Label = Username
+SequoiaDBInput.Password.Label = Password
 
 SequoiaDBInput.InputTab.Title = Input
 SequoiaDBInput.FieldsTab.Title = Fields
@@ -19,3 +21,10 @@ SequoiaDBInput.CLName.Label = Collection Name
 SequoiaDBInput.FieldsTab.FIELD_ALIAS = Alias
 SequoiaDBInput.FieldsTab.FIELD_PATH = Path
 SequoiaDBInput.FieldsTab.FIELD_TYPE = Type
+
+SequoiaDBInput.QueryTab.Title = Query
+SequoiaDBInput.Query.Label = Query expression (JSON)
+SequoiaDBInput.Selector.Label = Field Selector (JSON)
+SequoiaDBInput.Orderby.Label = Order By (JSON)
+SequoiaDBInput.Skip.Label = Skip
+SequoiaDBInput.Limit.Label = Limit
