support update and upsert

--- a/src/org/pentaho/di/trans/steps/sequoiadboutput/messages/messages_en_US.properties
+++ b/src/org/pentaho/di/trans/steps/sequoiadboutput/messages/messages_en_US.properties
@@ -19,8 +19,15 @@ SequoiaDBOutput.FieldsTab.Button.Label = Get Fields
 SequoiaDBOutput.CSName.Label = Collection Space Name
 SequoiaDBOutput.CLName.Label = Collection Name
 SequoiaDBOutput.BulkInsertSize.Label = Bulk Insert Size
+SequoiaDBOutput.Truncate.Label = Truncate
+SequoiaDBOutput.Update.Label = Update
+SequoiaDBOutput.Upsert.Label = Upsert
 SequoiaDBOutput.FieldsTab.FIELD_Path = Path
 SequoiaDBOutput.FieldsTab.FIELD_Name = Name
+SequoiaDBOutput.FieldsTab.IsCondField = Condition field for update
+SequoiaDBOutput.FieldsTab.UpdateOp = Update operator
+
+SequoiaDBOutput.Truncate.TipText = Remove all record from collection before start
 
 SequoiaDBOutput.Msg.Err.FailedToGetTheFieldVal = Failed to get the value of the field!
 SequoiaDBOutput.Msg.Err.InputFieldsSizeError = The number of input fields is less than output fields!
